--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^7.8.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
