--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^7.8.0",
+    "react-verification-input": "^4.2.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
