--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
@@ -23,12 +24,14 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
+    "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^7.8.0",
     "react-verification-input": "^4.2.2",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
